--- a/MVN01/pom.xml
+++ b/MVN01/pom.xml
@@ -22,5 +22,10 @@
     <artifactId>spring-jdbc</artifactId>
     <version>4.3.9.RELEASE</version>
 </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
 </project>
